--- a/NativeDllTester/MainWindow.xaml
+++ b/NativeDllTester/MainWindow.xaml
@@ -5,14 +5,31 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NativeDllTester"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Native Dll Tester" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen"
+        WindowState="Maximized">
     <Grid>
-        <TextBox Name="FilePath" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="550" />
-        <Button Content="Browse" Click="OnBrowse" HorizontalAlignment="Left" Margin="565,13,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Load" Click="OnLoad" HorizontalAlignment="Left" Margin="645,13,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox Name="ErrorCode" HorizontalAlignment="Left" Height="23" Margin="82,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="478" IsReadOnly="True"/>
-        <Label Content="Error code:" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="ErrorMessage" HorizontalAlignment="Left" Height="94" Margin="10,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="550" IsReadOnly="True"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
 
+        <Label Grid.Row="0" Grid.Column="0" Content="Mod dll:"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Name="FilePath" TextWrapping="Wrap"/>
+        <Button Grid.Row="0" Grid.Column="2" Content="Browse" Click="OnBrowse"/>
+
+
+        <Label Grid.Row="1" Grid.Column="0" Content="Error code:"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Name="ErrorCode" TextWrapping="Wrap" IsReadOnly="True"/>
+        <Button Grid.Row="1" Grid.Column="2" Content="Load" Click="OnLoad"/>
+
+        <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Name="ErrorMessage" TextWrapping="Wrap" IsReadOnly="True"/>
     </Grid>
 </Window>
